refactor: toBuilder 제거

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=top6555@gmail.com
-spring.mail.password=gwtt yhwi wqzi gqgk
+spring.mail.password=tzfw icrz wzbe qosf
 
 # ?? ??
 spring.mail.properties.mail.smtp.auth=true
