--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,4 +18,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 #JWT
 jwt.secret=qwrmlasfmlqw2491u4291urjeiqowfjkwklfnlksdnfi13fnou3nounf13
 
+# data.sql ???? ?? ??
+spring.sql.init.data-locations=classpath:data.sql
+
 
